--- a/tags.html
+++ b/tags.html
@@ -2,8 +2,7 @@
 title: tags
 layout: page
 ---
-
-<article class="fir">
+<article class="tag_list">
 	<div id="archives">
 	{% for tag in site.tags %}
 		<h4 id="{{ tag[0] }}">{{ tag[0] }}</h4>
@@ -18,9 +17,8 @@ layout: page
 	{% endfor %}
 	</div>
 </article>
-<aside class="sec">
-<h4>tags</h4>
+<aside class="tag_cloud">
 {% for tag in site.tags %}
-	<a href="#{{ tag[0] }}" title="{{ tag[0] }}" rel="{{ tag[1].size }}">{{ tag[0] }}</a>
+	<a href="#{{ tag[0] }}" rel="{{ tag[1].size }}">{{ tag[0] }}</a>
 {% endfor %}
 </aside>
