--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@ index: true
   <span class="year">{{ post.date | date:"%Y" }}</span>
  </div>
  <header>
- <h2><a href="{{ site.url }}{{post.url}}" title="{{ post.title }}">{{ post.title }}</a></h2>
+ <h2><a href="{{ site.url }}{{post.url}}">{{ post.title }}</a></h2>
  </header>
  <div class="con">
-     {{ post.content  || split:'<!--more-->' | first }}
+  {{ post.content  || split:'<!--more-->' | first }}
  </div>
 </article>
 {% endfor %}
