--- a/guestbook.html
+++ b/guestbook.html
@@ -4,6 +4,6 @@ layout: page
 comments: yes
 ---
 
-<img src="http://ww4.sinaimg.cn/mw690/7b405dbbgw1e9ko16tk6dj20pc0fuwhw.jpg" />
+<img class="pic" src="http://ww4.sinaimg.cn/mw690/7b405dbbgw1e9ko16tk6dj20pc0fuwhw.jpg" />
 <br />
 来了，就留下你的足迹吧。
